# the-truth-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/aprendizaje/: AGENTS-fragment.md  CLAUDE-fragment.md
examples/cocina/: AGENTS-fragment.md  CLAUDE-fragment.md
examples/consultoria/: AGENTS-fragment.md  CLAUDE-fragment.md
examples/investigacion/: AGENTS-fragment.md  CLAUDE-fragment.md
examples/producto/: AGENTS-fragment.md  CLAUDE-fragment.md
src/the_truth_mcp/: __init__.py  cli.py  gemini_agent.py  schemas.py  server.py  vault.py
src/the_truth_mcp/client_extras/claude-code/: .mcp.json
src/the_truth_mcp/client_extras/claude-code/.claude/: settings.json
src/the_truth_mcp/client_extras/claude-code/.claude/commands/: ingest.md  query.md
src/the_truth_mcp/client_extras/claude-code/.claude/skills/markdown-cleaner/: SKILL.md
src/the_truth_mcp/vault_starter/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  log.md
src/the_truth_mcp/vault_starter/.claude/: settings.json
src/the_truth_mcp/vault_starter/.claude/commands/: ingest.md  query.md
src/the_truth_mcp/vault_starter/wiki/: index.md
tests/: conftest.py  test_vault.py
